# in_xsf

./: CHANGELOG  CHANGELOG.md  README.md  meson.build
include/: DialogBuilder.h  TagList.h  XSFCommon.h  XSFConfig.h  XSFConfig_NCSF.h  XSFConfig_SNSF.h  XSFFile.h  XSFPlayer.h  XSFPlayer_NCSF.h  codecvt.h  convert.h  eqstr.h  fstream_wfopen.h  ltstr.h  resource.h  windowsh_wrapper.h  wstring_convert.h
